@@ -67,6 +67,7 @@ import java.io.File;
 import java.io.OutputStream;
 import java.net.URI;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
@@ -772,7 +773,7 @@ public class ScientificObjectAPITest extends AbstractMongoIntegrationTest {
 
         Map<String, Object> currentScientificObjectSearchParams = new HashMap<String, Object>() {
             {
-                put("criteria_on_data", URLEncoder.encode(new ObjectMapper().writeValueAsString(criteriaForCurrentTest), "UTF-8"));
+                put("criteria_on_data", URLEncoder.encode(new ObjectMapper().writeValueAsString(criteriaForCurrentTest), StandardCharsets.UTF_8));
             }
         };
         WebTarget searchTarget = appendSearchParams(target(searchPath), 0, 20, currentScientificObjectSearchParams);
@@ -862,7 +863,7 @@ public class ScientificObjectAPITest extends AbstractMongoIntegrationTest {
 
         Map<String, Object> currentScientificObjectSearchParams = new HashMap<String, Object>() {
             {
-                put("criteria_on_data", URLEncoder.encode(new ObjectMapper().writeValueAsString(criteriaForCurrentTest), "UTF-8"));
+                put("criteria_on_data", URLEncoder.encode(new ObjectMapper().writeValueAsString(criteriaForCurrentTest), StandardCharsets.UTF_8));
             }
         };
         WebTarget searchTarget = appendSearchParams(target(searchPath), 0, 20, currentScientificObjectSearchParams);
@@ -965,7 +966,7 @@ public class ScientificObjectAPITest extends AbstractMongoIntegrationTest {
 
         Map<String, Object> currentScientificObjectSearchParams = new HashMap<String, Object>() {
             {
-                put("criteria_on_data", URLEncoder.encode(new ObjectMapper().writeValueAsString(criteriaForCurrentTest), "UTF-8"));
+                put("criteria_on_data", URLEncoder.encode(new ObjectMapper().writeValueAsString(criteriaForCurrentTest), StandardCharsets.UTF_8));
             }
         };
         WebTarget searchTarget = appendSearchParams(target(searchPath), 0, 20, currentScientificObjectSearchParams);
@@ -985,7 +986,7 @@ public class ScientificObjectAPITest extends AbstractMongoIntegrationTest {
         criteriaForCurrentTest.setCriteriaList(new ArrayList<>(Arrays.asList(moreThan10Dot5SingleCriteria, equalToo20201011SingleCriteria)));
         currentScientificObjectSearchParams = new HashMap<String, Object>() {
             {
-                put("criteria_on_data", URLEncoder.encode(new ObjectMapper().writeValueAsString(criteriaForCurrentTest), "UTF-8"));
+                put("criteria_on_data", URLEncoder.encode(new ObjectMapper().writeValueAsString(criteriaForCurrentTest), StandardCharsets.UTF_8));
             }
         };
         searchTarget = appendSearchParams(target(searchPath), 0, 20, currentScientificObjectSearchParams);
@@ -1004,7 +1005,7 @@ public class ScientificObjectAPITest extends AbstractMongoIntegrationTest {
         criteriaForCurrentTest.setCriteriaList(new ArrayList<>(Collections.singletonList(wrongDatatypeForIntCriteria)));
         currentScientificObjectSearchParams = new HashMap<String, Object>() {
             {
-                put("criteria_on_data", URLEncoder.encode(new ObjectMapper().writeValueAsString(criteriaForCurrentTest), "UTF-8"));
+                put("criteria_on_data", URLEncoder.encode(new ObjectMapper().writeValueAsString(criteriaForCurrentTest), StandardCharsets.UTF_8));
             }
         };
         searchTarget = appendSearchParams(target(searchPath), 0, 20, currentScientificObjectSearchParams);
@@ -1013,7 +1014,7 @@ public class ScientificObjectAPITest extends AbstractMongoIntegrationTest {
         criteriaForCurrentTest.setCriteriaList(new ArrayList<>(Collections.singletonList(inexistingVariableCriteria)));
         currentScientificObjectSearchParams = new HashMap<String, Object>() {
             {
-                put("criteria_on_data", URLEncoder.encode(new ObjectMapper().writeValueAsString(criteriaForCurrentTest), "UTF-8"));
+                put("criteria_on_data", URLEncoder.encode(new ObjectMapper().writeValueAsString(criteriaForCurrentTest), StandardCharsets.UTF_8));
             }
         };
         searchTarget = appendSearchParams(target(searchPath), 0, 20, currentScientificObjectSearchParams);
